[tool.poetry]
name = "llmbench-tui"
version = "0.1.0"
description = "LiteLLM benchmark runner with token calibration and Textual TUI"
authors = ["Saejin Mahlau-Heinert <saejinmh@va.wagner.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
textual = "^0.79.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
